app/styles/main.scss
// bower:scss
@import "../bower_components/twbs-bootstrap-sass/vendor/assets/stylesheets/bootstrap.scss";
// endbower

@import "compass/css3";

@import "variables";
@import "contacts";

@font-face {
  font-family: 'Glegoo';
  font-weight: normal;
  src: url(fonts/glegoo.woff) format('woff');
}

html, body {
  height: 100%;
  background-color: $bg-color;
  font-family: Glegoo, serif;
}

.browsehappy {
  margin: 0.2em 0;
  background: #ccc;
  color: #000;
  padding: 0.2em 0;
}

section {
  &#home {
    margin: 0;
    padding: 0;
    height: 100%;
    overflow-y: auto;
    overflow-x: hidden;
    box-shadow: 0px 0px 46px 0px rgba(23, 40, 93, 0.2);
  }

  min-height: 100%;
  position: relative;
}

nav {
  position: relative;
  display: table;
  height: 100%;
  overflow-y: auto;
  overflow-x: hidden;

  ul {
    display: table-cell;
    vertical-align: middle;
    overflow-y: auto;
    overflow-x: hidden;

    &.nav-pills li.active a {
      color: inherit;
      background-color: inherit;

      &:hover {
        color: inherit;
      }

      &.nav-home {
        background-image: url("#{$base-url-img}logo-hover.svg");
      }

      &.nav-values {
        background-image: url("#{$base-url-img}red-hover.svg");
      }

      &.nav-change {
        background-image: url("#{$base-url-img}orange-hover.svg");
      }

      &.nav-background {
        background-image: url("#{$base-url-img}green-hover.svg");
      }

      &.nav-portfolio {
        background-image: url("#{$base-url-img}purple-hover.svg");
      }

      &.nav-contact {
        background-image: url("#{$base-url-img}blue-hover.svg");
      }
    }
  }

  a {
    color: #888;

    &:hover {
      background-color: transparent !important;
      color: $text-color-dark;
    }
  }

  .nav-home {
    background: url("#{$base-url-img}logo.svg");

    &:hover {
      background-image: url("#{$base-url-img}logo-hover.svg");
    }
  }

  .nav-values {
    background-image: url("#{$base-url-img}red.svg");

    &:hover {
      background-image: url("#{$base-url-img}red-hover.svg");
    }
  }

  .nav-change {
    background-image: url("#{$base-url-img}orange.svg");

    &:hover,&:active {
      background-image: url("#{$base-url-img}orange-hover.svg");
    }
  }

  .nav-background {
    background-image: url("#{$base-url-img}green.svg");

    &:hover {
      background-image: url("#{$base-url-img}green-hover.svg");
    }
  }

  .nav-portfolio {
    background-image: url("#{$base-url-img}purple.svg");

    &:hover {
      background-image: url("#{$base-url-img}purple-hover.svg");
    }
  }

  .nav-contact {
    background-image: url("#{$base-url-img}blue.svg");

    &:hover {
      background-image: url("#{$base-url-img}blue-hover.svg");
    }
  }
}

.nav-horizontal {
  ul {
    padding: 52px 0px 0px 0px;

    li {
      padding-bottom: 10px;

      a {
        width: 80px;
        height: 120px;

        padding: 82px 0px 10px 0px;
        text-align: center;

        background-size: 55px;
        background-position: center top;
        background-repeat: no-repeat;
      }
    }
  }
}

.nav-vertical {
  ul {
    padding: 0px;

    li {
      padding-bottom: 10px;
      clear: both;

      a {
        width: 200px;
        padding: 20px 0px 0px 65px;
        background-size: 55px;
        background-position: left 24px;
        background-repeat: no-repeat;
        line-height: 55px;
      }
    }
  }
}

#pf-logo {
  margin: auto;
  position: absolute;
  top: 0px;
  bottom: 0px;
  left: 0px;
  right: 0px;
  width: 30%;
  max-width: 235px;
  padding-left: 10px;
  z-index: 1000;
}

#pf-nav-content {
  z-index: 1000;
}

#home {
  #pf-intro-container {
    height: 100%;
    padding: 0px;
    margin: 0px;
    width: 50%;
    left: 0%;
    position: absolute;
    background: url("#{$base-url-img}home1.jpg") center center; background-size: cover;
    display: table;
    box-shadow: inset 0px 0px 240px 80px rgba(0,0,0,0.6);

    blockquote {
      color: #fff;
      border: 0px;
      padding-right: 120px;
      padding-left: 60px;
      display: table-cell;
      vertical-align: middle;
      text-shadow: 1px 2px 8px #000;
      font-size: 1.3em;
      background: url("#{$base-url-img}pattern.svg") center center; background-size: 63px 63px;

      footer {
        color: #fff;
      }
    }
  }

  .nav-container {
    margin: auto;
    position: absolute;
    height: 100%;
    padding: 0px;
    padding-left: 100px;
    width: 50%;
    top: 0px;
    right: 0px;
    overflow-y: auto;
    overflow-x: hidden;
  }
}

#contents {
  margin: 0;
  padding: 0;
  height: 100%;
  position: relative;

  #controls {
    position: absolute;
    height: 100%;
    top: 0px;
    left: 0px;
  }

  #pf-logo-content {
    margin: auto;
    position: absolute;
    top: 0px;
    bottom: 0px;
    left: 30px;
    width: 185px;
    padding-left: 10px;
    font-size: 0px;
    line-height: 0px;
    z-index: 1000;

    background: url("#{$base-url-img}logoindex.svg") no-repeat center center; background-size: 185px 185px;
  }

  .nav-container {
    margin: auto;
    position: absolute;
    height: 100%;
    padding: 0px;
    top: 0px;
    right: 75px;
    overflow-y: auto;
    overflow-x: hidden;
  }

  .pf-content-container {
    padding: 40px 100px 100px;
  }

  h1 {
    text-align: center;
    line-height: 72px;
  }

  p {
    text-align: justify;
  }

  section {
    margin-left: 125px;
    margin-right: 250px;

    box-shadow: inset 0px 0px 46px 0px rgba(23, 40, 93, 0.2);
  }
}

#values {
  background: url("#{$base-url-img}pattern-light.svg") center center; background-size: 63px 63px;
}

#change {
  color: $bg-color;
  text-shadow: 1px 2px 8px #000;
  background: url("#{$base-url-img}tea.jpg"); background-size: cover;
  background-position: center center;
}

#background {
  background: url("#{$base-url-img}pattern-light.svg") center center; background-size: 63px 63px;

  .pf-content-container {
    padding-left: 0px;
    padding-right: 0px;
    padding-bottom: 0px;
  }

  div.jumbotron {
    background-position: center center;
    display: block;
    text-shadow: 1px 2px 8px #000;

    .bg-full-container {
      overflow: hidden;
    }

    &:hover {
      text-decoration: none;
    }

    margin-bottom: 0px;
    color: $bg-color;
    min-height: 250px;

    p,h2,h3 {
      padding-left: 100px;
      padding-right: 100px;
    }

    h2 {
      font-size: 24px;
      text-align: center;
    }

    h3 {
      font-size: 18px;
      padding-left: 100px;
      padding-top: 24px;
    }

    p {
      font-size: 14px;
      padding-top: 7px;
    }

    a {
      color: $bg-color;
      text-decoration: underline;
    }
  }

  #bg-research {
    background-image: url("#{$base-url-img}research.jpg"); background-size: cover;

    &:hover {
      background-image: url("#{$base-url-img}research-hover.jpg"); background-size: cover;
    }
  }

  #bg-practice {
    background-image: url("#{$base-url-img}practice.jpg"); background-size: cover;

    &:hover {
      background-image: url("#{$base-url-img}practice-hover.jpg"); background-size: cover;
    }
  }

  #bg-method{
    background-image: url("#{$base-url-img}method.jpg"); background-size: cover;

    &:hover {
      background-image: url("#{$base-url-img}method-hover.jpg"); background-size: cover;
    }
  }
}

#portfolio {
  color: $bg-color;
  text-shadow: 1px 2px 8px #000;
  background: url("#{$base-url-img}book.jpg"); background-size: cover;
  background-position: center center;
}

#contact {

  header {
    color: $bg-color;
    text-shadow: 1px 2px 8px #000;
  }

  .pf-content-container {
    position: absolute;
    left: 0px;
    right: 0px;
    height: 0px;
  }
  
  #contact-grid {
    display: none;
  }

  article.person {
    display: none;
  }

  article {
    width: 50%;
    float: left;

    &:nth-child(even) {
      clear: left;
    }

    h1 {
      text-align: left;
      font-size: 20px;
      line-height: 24px;
    }
  }

  a {
    color: #333;
    text-decoration: underline;
  }
}

body>footer {
  position: fixed;
  bottom: 0px;
  right: 0px;
  font-size: 10px;
  padding: 20px 20px 5px;
  color: #7e7e7e;
}

